--- a/README
+++ b/README
@@ -24,12 +24,12 @@ not python 3
 ### Document format
 
 doc_id: sha256 hash of whole mail as in 'data' field
-upload_date: date, when the mail was uploaded in YYYY-MM-DD hh:mm:ss
+upload_date: date UTC, when the mail was uploaded in YYYY-MM-DD hh:mm:ss
             `date "+%Y-%M-%d %H:%m:%S"` i.e. 2013-12-08 11:12:42
 flag: signed, encrypted
 labels: list of unique label names
 
-date: date given in mail, in ascii time format
+date: date UTC given in mail, in YYYY-MM-DD hh:mm:ss
 from: email address of sender
 to: array of email addresses of receivers
 subject: string containing subject
