--- a/README
+++ b/README
@@ -3,10 +3,11 @@ not python 3
 
 ### TODO
 
-* write function for parsing and uploading mail
+* rewrite function for parsing and uploading mail
+  ** write mechanism for adding labels automatically
 * write mail_view script for viewing inbox and searchresults easily
-* write full text search indexing (in upload and search scripts)
 * write module to load mails from Maildirs or mboxes
+* write full text search indexing
 * Support comments and quoted strings in parseaddr.py
 * Convert quoted-printable in subject and email displayname to utf8
 * Check encoding on downloading and saving emails
@@ -24,10 +25,10 @@ not python 3
   Configurations for logs, the CouchDB connection and other things.
 
 * mail_upload
-  Parse and upload a given mail. (Extract metadata, maybe get keywords)
+  Parse and upload a given mail (extract metadata from header).
 
 * mail_search
-  Search for mail hashes by metadata (maybe even keywords)
+  Search for mail hashes by metadata.
   Python function returns docs. Script prints list of hashes to stdout.
 
 * mail_download
@@ -39,6 +40,11 @@ not python 3
   Every beginning of a line from stdin starting with hex chars is taken as a
   doc id and is downloaded. Add comments / more data separated with a whitespace
   after the hash, or start lines with whitespace or non hey char to ignore them.
+
+* mail_keywords
+  Search mails by keywords with extra index file not included in database for
+  security reasons. So you can index you decryptet PGP Mails :-) and the index
+  is saved locally on your computer.
 
 ### Document format
 
