--- a/README
+++ b/README
@@ -7,6 +7,7 @@ TODO
 * enhance search with operators
 * write full text search indexing
 * Add GPG signed and encrypted to autolabelling
+* check document.type == 'mail'
 * Add license conforming lrparsing.py license
 * Documentation
 
