--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Special prerequisite: lrparsing module:
 TODO
 
 * set logging level and default logger in config
-* new executable: reprocess.py
+* support adding labels to mail by editing header with Labels: field
 * support --search QUERY argument in view.py
 * make ssl verification optional (by fingerprint?)
 * write full text search indexing
